tests/snapshots/case__case_smart_lower@002.snap
---
source: tests/case.rs
description: "input: items [\"aBcDeF\"]\noptions: --case smart\nafter:\n  @type \"abc\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> aBcDeF                                                                        "
"  1/1                                                                        0/0"
"> abc                                                                           "
cursor: (24, 6)
