tests/snapshots/case__case_smart_no_match@002.snap
---
source: tests/case.rs
description: "input: items [\"aBcDeF\"]\noptions: --case smart\nafter:\n  @type \"Abc\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> Abc                                                                           "
cursor: (24, 6)
