tests/snapshots/case__insta_case_non_ascii.snap
---
source: tests/case.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  СЛОВО                                                                         "
"  Слово                                                                         "
"> слово                                                                         "
"  3/3                                                                        0/0"
">                                                                               "
